Stopped zooming in on selects on iPhone

--- a/frontend/src/components/EventHost.css
+++ b/frontend/src/components/EventHost.css
@@ -88,6 +88,7 @@
 
 .eventHost__field__viewModeSelect {
   width: 15rem;
+  font-size: 1rem;
   margin-bottom: 0.5rem;
 }
 
